--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,13 @@
 
         <activity
             android:name=".MessageDetailActivity"
-            android:exported="false"
+            android:launchMode="singleTop"
             android:parentActivityName=".MainActivity" />
 
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleTask"
+            android:clearTaskOnLaunch="false"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
