21-12-24 Nu modtages og vises notifikationen i appen, hvis appen er åben lukket eller i baggrunden.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
 
         <activity
             android:name=".MessageDetailActivity"
-            android:launchMode="singleTop"
-            android:taskAffinity=""
-            android:parentActivityName=".MainActivity"
-            android:excludeFromRecents="true" />
+            android:exported="false"/>
 
         <activity
             android:name=".MainActivity"
